@@ -2,6 +2,7 @@
 - Bugfix: The process other routing is never called.
 - Bugfix: The cookie editor needs to be "initialized" prior usage.
 - Bugfix: Wrong meta data, when using dual output.
+- Bugfix: Missing css definitions for label.
 
 3.2.1
 - Bugfix: Wrong error handler restoration after deleting
